# Qt_Chat

./: .gitignore  README.md
Client/: Authorization.qml  CMakeLists.txt  Chat.qml  Main.qml  Start.qml  client.cpp  client.h  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h
